# BOHydroCata

./: README.md  clean_databases.py  experiments.db  pyproject.toml  pytest.ini  test_experiments.db
hydrocata/api/: main.py
hydrocata/api/routers/: experiments.py
hydrocata/core/: config.py  schemas.py
hydrocata/optimization/: bayesian.py
hydrocata/storage/: __init__.py  database_storage.py
static/css/: styles.css
static/js/: scripts.js
templates/: base.html  experiments.html  index.html  recommend.html
tests/: test_api.py  test_optimizer.py
