[tool.poetry]
name = "bohydrocata"
version = "0.1.0"
description = ""
authors = ["ZhuangKang <k13659082460@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = ">=0.115.12,<0.116.0"
pytest = ">=8.3.5,<9.0.0"
uvicorn = ">=0.34.2,<0.35.0"
numpy = ">=2.2.5,<3.0.0"
httpx = ">=0.28.1,<0.29.0"
pydantic = ">=2.11.4,<3.0.0"
bayesian-optimization = "^2.0.3"
pytest-asyncio = "0.24.0"
scipy = "^1.15.3"
sqlalchemy = "^2.0.40"
aiosqlite = "^0.21.0"
black = "^25.1.0"
flake8 = "^7.2.0"
isort = "^6.0.1"
jinja2 = "^3.1.6"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
